static/flatmap-viewer.css
/* Overide Mapbox's relative positioning... */

.mapboxgl-map {
    position: absolute;
}

/* Context menu */

.flatmap-contextmenu-popup .mapboxgl-popup-content {
    padding: 0;
}
.flatmap-contextmenu .mapboxgl-popup-tip {
    display: none;
}
.flatmap-contextmenu {
    padding: 0;
    background: #EEE;
    box-shadow: 0 4px 5px 3px rgba(0, 0, 0, 0.2);
}
ul.flatmap-contextmenu {
    list-style: none;
    padding: 6px;
    min-width: 120px;
    margin: 0;
    font-size: 1.2em;
    border: 1px solid #888;
}
li.flatmap-contextmenu-item:hover {
    background: #58E;
}

/* Custom control buttons */

.control-button {
    display: inline-block;
    vertical-align: middle;
    margin-left: 5px;
}
.control-button svg {
    width: 20px;
    height: 20px;
    margin-top: 2px;
}

/* Search box */

#search-control-input {
    line-height: 0;
    font-size: 1.5em;
    width: 240px;
}

/* Feature information */

.info-control .control-button-active,
.info-control .control-button-active:not(:disabled):hover {
    background-color: #80c0ff;
}

#info-control-info {
    text-align: left;
    display: inline-grid;
    grid-template-columns: 1fr 4fr;
    column-gap: 10px;
    row-gap: 0.2em;
    width: 240px;
    color: #8300bf;
    font-size: 10pt;
}

.info-name {
    font-weight: bold;
    text-transform: capitalize;
}

.info-control-features {
    width: 600px;
    margin: 0;
    overflow: auto;
    line-height: 1.1em;
}

/* Navigation control buttons */

.mapboxgl-ctrl button.navigation-zoom-in {
    background-image: url("images/zoom-in-button.png");
}
.mapboxgl-ctrl button.navigation-zoom-in:active {
    background-image: url("images/zoom-in-active.png");
}
.mapboxgl-ctrl button.navigation-zoom-out {
    background-image: url("images/zoom-out-button.png");
}
.mapboxgl-ctrl button.navigation-zoom-out:active {
    background-image: url("images/zoom-out-active.png");
}
.mapboxgl-ctrl button.navigation-reset {
    background-image: url("images/reset-map-button.png");
}
.mapboxgl-ctrl button.navigation-reset:active {
    background-image: url("images/reset-map-active.png");
}
.navigation-group button {
    display: block;
    width:36px;
    height: 36px;
    border-radius: 50%;
    background-color: transparent;
    background-repeat: no-repeat;
    background-position: -1px -1px;
    border: none;
    box-shadow: none;
}
.navigation-group button:focus {
  outline: 0;
}
/* establish desired focus ring appearance for appropriate input modalities */
.navigation-group button:focus-visible {
  outline: 2px solid blue;
}

/* Tooltips */

.flatmap-tooltip-popup .mapboxgl-popup-content {
    background: #eee;
    padding-top: 5px;
    padding-bottom: 5px;
}
.mapboxgl-popup-anchor-top .mapboxgl-popup-tip {
    border-bottom-color: #eee;
}
.mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip {
    border-top-color: #eee;
}

/* Labels */

.flatmap-feature-label {
    color: #8300bf;
    font-size: 12pt;
}

/* Nerve key */

.flatmap-nerve-grid {
    display: inline-grid;
    grid-template-columns: 4fr 1.1fr;
    column-gap: 10px;
    row-gap: 0.2em;
    width: 240px;
    font-size: 10pt;
}
.nerve-line {
    margin: 5px 0;
    height: 3px;
}
.nerve-cns {
    background: #9B1FC1;
}
.nerve-lcn {
    background: #F19E38;
}
.nerve-para-pre {
    background: #3F8F4A;
}
.nerve-para-post {
    background: repeating-linear-gradient(to right,#3F8F4A 0,#3F8F4A 6px,transparent 6px,transparent 9px)
}
.nerve-sensory {
    background: #2A62F6;
}
.nerve-somatic {
    background: #98561D;
}
.nerve-symp-pre {
    background: #EA3423;
}
.nerve-symp-post {
    background: repeating-linear-gradient(to right,#EA3423 0,#EA3423 6px,transparent 6px,transparent 9px)
}

/* End of file */

